# ScholarWriting

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.codex/agents/: scholar-architect.toml  scholar-reviewer.toml  scholar-revision.toml  scholar-writer.toml
docs/: architecture.md  codex-adaptation-qa.md  codex-adaptation-review.md  codex-architecture.md  codex-getting-started.md  configuration.md  extending.md  getting-started.md  reference-integration-redesign.md
examples/demo-nsfc-proposal/: config.yaml  scores.yaml
examples/from-draft/: config.yaml  scores.yaml
examples/from-materials/: config.yaml  scores.yaml
examples/from-outline/: config.yaml  scores.yaml
scholar-writing/config/: default_config.yaml  reference_registry.yaml
scholar-writing/references/: NSFC_GUIDE.md  NSFC_STRUCTURE_ZH.md  SENTENCE_PATTERNS_ZH.md  STYLE_GUIDE_ZH.md
scholar-writing/schemas/: README.md  claim_registry.schema.yaml  config.schema.yaml  outline.schema.yaml  reference_registry.schema.yaml  review_report.schema.yaml  review_result.schema.yaml  revision_log.schema.yaml  scores.schema.yaml  taskpack.schema.yaml
scholar-writing/scripts/: check_format.py  check_references.py  count_words.py  requirements.txt  validate.py
scholar_writing/: __init__.py  cli.py
scripts/: install-codex.sh  uninstall-codex.sh
tests/: test_cli.py  test_codex_adapter.py  test_codex_install_scripts.py  test_core.py  test_nsfc_sections.py  test_references.py  test_review_result_references.py  test_scripts.py  test_taskpack_references.py  test_validate.py
(+105 files in other folders)
